Infinite und RC-Modus entfernt

--- a/example.ini
+++ b/example.ini
@@ -10,16 +10,10 @@ StepSize = 5
 # Einschwingzeit / sec
 Delay = 5.0
 
-Infinite = no
-
-# Messmethode zur temperaturunabhängigen Messung
-Checkmode = yes
+# Messmethode zur temperaturunabhängigen Messung (yes / no)
+Checkmode = no
 # Position des Störkörpers an der die Referenzfrequenz gemessen wird
 ReferencePoint = 0
-
-# Der Ordner muss existieren
-CaptureResonanceCurve = yes
-ResonanceCurveFolder = RC/
 
 [MOTOR]
 Port = /dev/ttyUSB0
