Checkmode wieder angestellt

--- a/example.ini
+++ b/example.ini
@@ -11,7 +11,7 @@ StepSize = 5
 Delay = 5.0
 
 # Messmethode zur temperaturunabhängigen Messung (yes / no)
-Checkmode = no
+Checkmode = yes
 # Position des Störkörpers an der die Referenzfrequenz gemessen wird
 ReferencePoint = 0
 
